feat(user-service): implement PUT/PATCH APIs with transactional service layer
- Added full update (PUT) endpoint
- Added partial update (PATCH) endpoint
- Applied @Transactional to maintain DB consistency