@@ -1,5 +1,6 @@
 package com.example.userservice.service;
 
+import com.example.userservice.dto.UserPatchRequest;
 import com.example.userservice.dto.UserRequest;
 import com.example.userservice.dto.UserResponse;
 import com.example.userservice.entity.User;
@@ -7,87 +8,148 @@ import com.example.userservice.exception.UserNotFoundException;
 import com.example.userservice.kafka.UserEventProducer;
 import com.example.userservice.mapper.UserMapper;
 import com.example.userservice.repository.UserRepository;
+import lombok.RequiredArgsConstructor;
+import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
-
     private final UserEventProducer userEventProducer;
-
     private final UserMapper userMapper;
-
-    public UserServiceImpl(UserRepository userRepository, UserEventProducer userEventProducer, UserMapper userMapper) {
-        this.userRepository = userRepository;
-        this.userEventProducer = userEventProducer;
-        this.userMapper = userMapper;
-    }
+    private final ModelMapper modelMapper;
 
     @Override
+    @Transactional
     public UserResponse createUser(UserRequest userRequest) {
-        //User user = UserMapper.toEntity(userRequest);
-        User user=userMapper.toEntity(userRequest);
-        User userCreated = userRepository.save(user);
-        //UserResponse response = UserMapper.toResponse(userCreated);
-        UserResponse userResponse = userMapper.toResponse(userCreated);
-        userEventProducer.sendUserCreatedEvent(userResponse);
-        return userResponse;
+
+        User user = userMapper.toEntity(userRequest);
+
+        User savedUser = userRepository.save(user);
+
+        UserResponse response = userMapper.toResponse(savedUser);
+
+        userEventProducer.sendUserCreatedEvent(response);
+
+        return response;
     }
 
     @Override
+    @Transactional
     public List<UserResponse> createUsers(List<UserRequest> userRequests) {
+
         List<User> users = userRequests.stream()
                 .map(userMapper::toEntity)
                 .toList();
-        List<User> usersCreated = userRepository.saveAll(users);
-        List<UserResponse> responses = usersCreated.stream()
+
+        List<User> savedUsers = userRepository.saveAll(users);
+
+        List<UserResponse> responses = savedUsers.stream()
                 .map(userMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
+
         responses.forEach(userEventProducer::sendUserCreatedEvent);
+
         return responses;
     }
 
     @Override
     public List<UserResponse> getAllUsers() {
+
         return userRepository.findAll()
                 .stream()
                 .map(userMapper::toResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public UserResponse getUserById(Long id) {
-        User user = userRepository.findById(id).orElseThrow(() -> new UserNotFoundException(id));
+
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new UserNotFoundException(id));
+
         return userMapper.toResponse(user);
     }
 
     @Override
     public UserResponse getUserByName(String name) {
+
         User user = userRepository.findByName(name);
+
         if (user == null) {
             throw new UserNotFoundException(name);
         }
+
         return userMapper.toResponse(user);
     }
 
     @Override
+    @Transactional
+    public void deleteUserById(Long id) {
+
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new UserNotFoundException(id));
+
+        userRepository.delete(user);
+    }
+
+    @Override
+    @Transactional
     public void deleteAllUsers() {
         userRepository.deleteAll();
     }
 
     @Override
-    public void deleteUserById(Long id) {
-        if (!userRepository.existsById(id)) {
-            throw new UserNotFoundException(id);
-        }
-        userRepository.deleteById(id);
+    @Transactional
+    public UserResponse updateUser(Long id, UserRequest userRequest) {
+
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new UserNotFoundException(id));
+
+        modelMapper.map(userRequest, user);
+
+        User updatedUser = userRepository.save(user);
+
+        return userMapper.toResponse(updatedUser);
     }
 
-    /* Entity in Service X (not recommended)
+    @Override
+    @Transactional
+    public UserResponse patchUser(Long id, UserPatchRequest userPatchRequest) {
+
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new UserNotFoundException(id));
+
+        modelMapper.map(userPatchRequest, user);
+
+        User updatedUser = userRepository.save(user);
+
+        return userMapper.toResponse(updatedUser);
+    }
+
+    /*@Override
+    public UserResponse patchUser(Long id, Map<String, Object> updates) {
+        User user = userRepository.findById(id).orElseThrow(() -> new UserNotFoundException(id));
+
+       if(updates.containsKey("name")){
+            user.setName(updates.get("name").toString());
+       }
+       if(updates.containsKey("email")){
+            user.setEmail(updates.get("email").toString());
+       }
+       if(updates.containsKey("age")){
+           user.setAge(Integer.parseInt(updates.get("age").toString()));
+       }
+       userRepository.save(user);
+       return userMapper.toResponse(user);
+    }
+
+    Entity in Service X (not recommended)
     @Override
     public User createUser(User user) {
         return userRepository.save(user);
@@ -107,6 +169,5 @@ public class UserServiceImpl implements UserService {
     public User getUserByName(String name) {
         return userRepository.findByName(name);
     }*/
-
 
 }
